# rdfconvert

./: .gitignore  README.md  pyproject.toml  rdfconvert.py  requirements.txt
src/: rdfconvert.py
